--- a/src/css/generalStyles.scss
+++ b/src/css/generalStyles.scss
@@ -17,6 +17,12 @@ html,body{
     h1,h2,h3,h4,h5,h6{
       font-family: Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif;
     }
+    h4{
+      font-size:1.5rem;
+    }
+    h5{
+      font-size:1.25rem;
+    }
   }
 
   
