--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,5 +1,8 @@
 @import "normalize.scss";
 @import "generalStyles.scss";
+@import "nav.scss";
 @import "home.scss";
 @import "expertise.scss";
 @import "portfolio.scss";
+@import "contact.scss";
+@import "footer.scss";
