--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -23,6 +23,9 @@ nav {
   a.active{
       border-bottom:1px solid white;
   }
+  a:hover{
+    border-bottom:1px solid white;
+  }
   .icon {
     display: none;
     font-size: 35px!important;
@@ -34,13 +37,14 @@ nav {
 
 }
 
-
-
+.js-focus-visible:focus:not(.focus-visible) {
+  outline: none;
+}
 
 
 @media screen and (min-width: 991px) {
   nav{
-    min-height: 76px;
+    min-height: 77px;
     padding-top: 27px;
     background-color: transparent;
   }
@@ -48,21 +52,28 @@ nav {
     display:flex;
     justify-content: flex-end;
     margin-right: 32px;
+    max-width: 1100px;
+    margin:0 auto;
   }
 
   nav.scrolled{
-    min-height: 52px;
+    min-height: 53px;
     padding-top: 1px;
     background-color: #262625;
     a.active{
       border-bottom: solid transparent;
-  }
+      color: #37c5f3;
+    }
+    a:hover{
+      border-bottom: solid transparent;
+      outline: none;
+    }
   }
 }
 
-nav button:focus, nav div a:focus {
+:focus {
   outline-color: $color-honey-gold;
-  outline-width:1px;
+  outline-width:2px;
   outline-style: solid;
 }
 
