--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,5 +1,6 @@
 /* Scss variables */
 $color-honey-gold: #fcb040;
+$color-focus-blue: #37c5f3;
 
 @import "normalize.scss";
 @import "generalStyles.scss";
