--- a/src/css/expertise.scss
+++ b/src/css/expertise.scss
@@ -2,7 +2,7 @@
   min-height:100vh;
   display:flex;
   flex-direction: column;
-  padding:100px 20px;
+  padding:150px 20px;
   width:100%;
   max-width:100%;
   background-color: #fff;
@@ -23,6 +23,7 @@
       font-family: Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif;
       color: #212529;
       font-weight: 700;
+      text-align:left;
     }
     
     .expertise-piece{
@@ -30,8 +31,7 @@
       text-align:center;
       padding:0 20px;
       h5{
-        margin: 0 0 15px;
-        margin-bottom: 0;
+        margin: 15px 0;
         font-size:1.5rem;
         font-weight: 700;
       }
