--- a/src/css/expertise.scss
+++ b/src/css/expertise.scss
@@ -86,6 +86,7 @@
       display: flex;
       width: 80%;
       margin:0 auto;
+      margin-top:20px;
       flex-direction: column;
       padding:15px;
       .expertise-piece{
