CSS tweaks for better spacing and social icon added hover aniamtion

--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -20,6 +20,8 @@ footer{
   }
   svg:hover {
     fill: #37c5f3;
+    margin-top: -5px;
+    margin-bottom: 5px;
   }
   .footerLinks ul{
     list-style-type: none;
