--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -176,7 +176,7 @@ nav.mobile-menu .svg-menu-toggle {
     background-color: #262625;
     a.active{
       border-bottom: solid transparent;
-      color: #37c5f3;
+      color: $color-focus-blue;
     }
     a:hover{
       border-bottom: solid transparent;
