--- a/src/css/generalStyles.scss
+++ b/src/css/generalStyles.scss
@@ -8,13 +8,15 @@ html,body{
   
   body{
     min-height:100vh;
-    font-family: 'Roboto Slab', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight:400;
     p{
       margin-top: 0;
       margin-bottom: 1rem;
       line-height: 1.75rem;
+      font-size: 1rem;
     }
-    h1,h2,h3,h4,h5,h6{
+    h1,h2,h3,h4,h5,h6,a {
       font-family: Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif;
     }
     h4{
