--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -23,7 +23,7 @@
       width:100%;
       h4{
         margin-top: 15px;
-        margin-bottom: 0;
+        margin-bottom: 5px;
         font-weight: 700;
       }
       .portfolio-links{
