Css updates to expertise

--- a/src/css/expertise.scss
+++ b/src/css/expertise.scss
@@ -68,8 +68,9 @@
       .expertise-icons{
         text-align:left;
         img{
-          margin-left: 5px;
-          margin-bottom: 10px;
+          margin-left: 4px;
+          margin-right: 4px;
+          margin-bottom: 4px;
         }
       }
     }
