--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -49,12 +49,16 @@
 
 
 @media only screen and (min-width: 900px){
+
   #contact #contact-grid {
       max-width: 1140px;
       width:80%;
       padding-bottom:70px;
       .contact-item{
         flex-direction: row;
+      }
+      h2{
+        margin-bottom:0;
       }
   }
   
