--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -66,5 +66,17 @@
     max-width:500px;
     margin:0 auto 20px;
   }
+
+  #contact{
+    #contact-info{
+      text-align:left;
+      padding-left: 50px;
+      max-width: 480px;
+      .contact-item{
+        justify-content: start;
+        padding-left:10px;
+      }
+    }
+  }
 }
 
