--- a/src/css/expertise.scss
+++ b/src/css/expertise.scss
@@ -66,7 +66,9 @@
         border-color: #10707f;
       }
       .expertise-icons{
-        text-align:left;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content:center;
         img{
           margin-left: 4px;
           margin-right: 4px;
@@ -76,6 +78,50 @@
     }
   }
 }
+
+
+/*  Tool Tips Start  */
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 175px;
+  background-color: #212529;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -88px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #212529 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+
+/*   Tool Tips End   */
 
 
 
