nav glitch rolling back change 2

--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -141,8 +141,6 @@ nav.mobile-menu .svg-menu-toggle {
     }
   }
 
-
-
   nav{
     min-height: 77px;
     padding-top: 27px;
@@ -154,11 +152,11 @@ nav.mobile-menu .svg-menu-toggle {
     a:last-of-type{
       margin-right:2px;
     }
-    a.active, a.focus-visible:focus{
+    a.active /* ,a.focus-visible:focus */{
       color:white;
       border-bottom:1px solid white;
     }
-    a:hover, a.focus-visible:focus{
+    a:hover /* ,a.focus-visible:focus */{
       color:white;
       border-bottom:1px solid white;
     }
@@ -185,7 +183,7 @@ nav.mobile-menu .svg-menu-toggle {
     }
     a:focus{
       border-bottom: solid transparent;
-      color: $color-focus-blue;
+      //color: $color-focus-blue;
     }
   }
 }
