--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -1,114 +1,116 @@
 #home {
-	color: #fff;
-  height: 100vh;
-  min-height: 640px;
+color: #fff;
+background: rgb(32,44,91);
+background: url("/content/img/self-portrait/IMG_9982-2-testing-mobile.jpg");
+background-repeat: no-repeat, ;
+background-size:cover;
+background-position:center bottom;
+height: 100vh;
+min-height: 680px;
+display:flex;
+flex-direction:column;
+  div.center-container{
+    min-height: 680px;
+    height:100%;
+  }
+  div.intro-container{
+    height:100%;
+    position:relative;
+    min-height: 680px;
+  }
+}
+
+div.intro-image{
+  width:100%;
+  height:100%;
+}
+
+div.intro-image img{
+  display:none;
+  width:75%;
+  position:absolute;
+  bottom:43px;
+  left:50%;
+  transform: translate(-50%);
+  max-width:450px;
+  min-width:450px;
+  transition: all 1s;
+}
+
+.intro-text {
+  padding-top: 80px;
+  text-align: center;
+  transition: all 1s;
   
-  .intro-container{
-    padding: 0px 36px;
+  .intro-heading {
+    font-size: 100px;
+    line-height: 80px;
+    margin-bottom: 5px;
+    font-family: Yellowtail, 'Roboto Slab', 'Helvetica Neue', Helvetica, Arial, cursive;
+    font-weight: 200;
+    transition: all 1s;
   }
 
-  .intro-text {
-    padding-top: 80px;
-    padding-bottom: 270px; 
-    
-    .intro-heading {
-      font-size: 120px;
-      line-height: 100px;
-      margin-bottom: 5px;
-      font-family: Yellowtail, 'Roboto Slab', 'Helvetica Neue', Helvetica, Arial, cursive;
-      font-weight: 200;
-      text-align: left
-    }
-  
-    .intro-lead-in {
-      font-size: 17px;
-      font-style: italic;
-      line-height: 20px;
-      margin-bottom: 10px;
-      font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      text-align: left
-    }
-  }
-}
-
-
-@media (min-width:991px) {
-	#home {
-		text-align: center;
-		color: #fff;
-		background-color: #4c5864;
-		background-repeat: no-repeat;
-		background-attachment: scroll;
-		background-position: 90% 100%;
-    background-size: 700px;
-    
-    .intro-text{
-      .intro-lead-in {
-        font-size: 20px;
-        font-style: italic;
-        line-height: 23px;
-        margin-bottom: 10px;
-      }
-      .intro-heading {
-        font-size: 130px;
-        line-height: 105px;
-        margin-bottom: 5px;
-        font-weight: 200
-      }
-    } 
-
-  }
-}
-
-@media (min-width:1200px) {
-  #home .intro-container{
-    max-width:1180px;
-    margin:0 auto;
-    .intro-text{
-      .intro-lead-in {
-        font-size: 29px;
-        font-style: italic;
-        line-height: 33px;
-        margin-bottom: 10px;
-      }
-    .intro-heading {
-        font-size: 187px;
-        line-height: 150px;
-        margin-bottom: 5px;
-        font-weight: 200
-      }
-    }
+  .intro-lead-in {
+    font-size: 17px;
+    font-style: italic;
+    line-height: 20px;
+    margin-top: 40px;
+    font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    transition: all 1s;
   }
 }
 
 
 
-@media (max-width:465px) {
-  #home .intro-text{
-    .intro-heading{
-      text-align:center;
-      font-size: 100px;
-      line-height: 80px;
-      }
-      .intro-lead-in{
-        text-align:center;
-        margin-top:40px;
-        margin-left:0;
-      }
-  } 
-}
 
-
-@media (min-width:466px) and (max-width:576px) {
+@media (min-width:901px) {
   #home{
-    background-size:300px;
-      .intro-text {
-        .intro-heading, .intro-lead-in, header.masthead .intro-text {
-          text-align:center;
-        }
-        .intro-lead-in{
-          margin-left:-50px;
-        }
-     }
-   }
+    background: url("/content/img/self-portrait/IMG_9982-2-testing.jpg");
+    background-size:cover;
+    background-position:center;
+
+    .center-container{
+      max-width:1340px;
+      width: 100%;
+      margin: 0 auto;
+      height:100%;
+    }
+
+    div.intro-image{
+      width:100%;
+    img{
+      min-width:450px;
+      position:absolute;
+      bottom:43px;
+      left:75%;
+      transform: translate(-50%);
+      
+    }
+  }
+  
+    .intro-text {
+      padding-top: 140px;
+      text-align: left;
+      padding-left:10%;
+  
+      .intro-heading {
+        font-size: 160px;
+        line-height: 120px;
+        margin-bottom: 5px;
+        font-family: Yellowtail, 'Roboto Slab', 'Helvetica Neue', Helvetica, Arial, cursive;
+        font-weight: 200;
+      }
+
+      .intro-lead-in {
+        font-size: 22px;
+        font-style: italic;
+        line-height: 22px;
+        margin-top: 10px;
+        font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      }
+    }
+  }
 }
+
+
