--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -5,7 +5,7 @@ $color-focus-blue: #37c5f3;
 @import "normalize.scss";
 @import "generalStyles.scss";
 @import "nav.scss";
-@import "home-test.scss";
+@import "home.scss";
 @import "expertise.scss";
 @import "portfolio.scss";
 @import "contact.scss";
