--- a/src/css/generalStyles.scss
+++ b/src/css/generalStyles.scss
@@ -19,6 +19,9 @@ html,body{
     h1,h2,h3,h4,h5,h6,a {
       font-family: Montserrat, 'Helvetica Neue', Helvetica, Arial, sans-serif;
     }
+    h3{
+      font-size:1.5rem;
+    }
     h4{
       font-size:1.5rem;
     }
