--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -5,7 +5,7 @@
   padding:150px 20px;
   width:100%;
   max-width:100%;
-  background-color: #4c5864;
+  background-color: #3D4951;
   color:white;
   #portfolio-grid{
     display:flex;
