Added back navigation effect for smoother animation of closing nav menu

--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -61,7 +61,7 @@ nav {
     margin-top:53px;
     transition: max-height 0.5s ease-out; 
     a{
-      display:none;
+     // display:none;
     }
   }
   
