Backgournd image fix for homepage to deal with wepack css issue

--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -1,6 +1,6 @@
 #home {
 color: #fff;
-background: rgb(32,44,91);
+background:#262625;
 //background: url("/content/img/self-portrait/andy-durette-mobile-c.jpg");
 background-repeat: no-repeat, ;
 background-size:cover;
