Add another porfolio piece and added a filter for technical lookup

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -8,5 +8,6 @@ $color-focus-blue: #37c5f3;
 @import "home.scss";
 @import "expertise.scss";
 @import "portfolio.scss";
+@import "portfolioFilter.scss";
 @import "contact.scss";
 @import "footer.scss";
