--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -56,8 +56,8 @@
         border-color: #10707f;
       }
       img{
-        width:90%;
-        margin-left:5%;
+        width:85%;
+        margin-left:7.5%;
       }
     }
   }
@@ -78,9 +78,9 @@
       display: flex;
       width: 50%;
       flex-direction: column;
-      padding:15px;
+      padding:0 15px;
       div img{
-        width:90%;
+        width:85%;
       }
       .portfolio-links{
         flex-direction:row;
