--- a/src/css/portfolioFilter.scss
+++ b/src/css/portfolioFilter.scss
@@ -1,18 +1,42 @@
 #portfolio-filter{
-  width: 100%;
-  float: right; 
+  width: 100%; 
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   div{
     background-color: #117a8b;
-    padding: 8px 8px;
+    padding: 8px;
     border-radius: 5px;
+    flex-direction: column;
+    display: flex;
+    width: 85%;
+    label{
+      margin-left:5px;
+    }
   }
   #portfolio-filter-input{
     margin-left:5px;
     padding:5px;
     border-radius:5px;
     border: 0px solid transparent;
+  }
+}
+
+
+@media only screen and (min-width: 600px) {
+  #portfolio-filter{
+    justify-content: flex-end;
+    div{
+      padding: 8px 8px;
+      flex-direction: row;
+      width:auto;
+      align-items: center;
+    }
+    #portfolio-filter-input{
+      margin-left:5px;
+      padding:5px;
+      border-radius:5px;
+      border: 0px solid transparent;
+    }
   }
 }
