--- a/src/css/portfolioFilter.scss
+++ b/src/css/portfolioFilter.scss
@@ -49,28 +49,28 @@
 
 
 
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-      margin-bottom: calc(-90vh + 1px);
-      
-    }
-    100% {
-      opacity: 1;
-      margin-bottom: 0;
-    }
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    margin-top: calc(80vh + 1px);
+    
   }
+  100% {
+    opacity: 1;
+    margin-top: 25px;
+  }
+}
 
-  @keyframes fadeOut {
-    0% {
-      opacity: 1;
-      margin-bottom: 0;
-    }
-    100% {
-      opacity: 0;
-      margin-bottom: calc(-90vh + 1px);
-    }
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+    margin-top: 25px;
   }
+  100% {
+    opacity: 0;
+    margin-top: calc(80vh + 1px);
+  }
+}
 
 @media only screen and (min-width: 600px) {
 
