Updated portfolio pieces

--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -1,12 +1,13 @@
 #portfolio{
   min-height:100vh;
-  display:flex;
+  // display:flex;
   flex-direction: column;
-  padding:150px 20px;
+  padding:200px 20px;
   width:100%;
   max-width:100%;
   background-color: #4c5864;
   color:white;
+  justify-content: center;
   #portfolio-grid{
     display:flex;
     flex-direction: column;
@@ -15,7 +16,7 @@
     h2{
       font-size: 40px;
       margin-top: -25px;
-      margin-bottom: 40px;
+      margin-bottom: 20px;
       width:100%;
       text-align:center;
     }
