--- a/src/css/contact.scss
+++ b/src/css/contact.scss
@@ -3,13 +3,14 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  padding: 150px 20px 20px 20px;
+  padding: 200px 20px 20px 20px;
   width: 100%;
   max-width: 100%;
   color: white;
   text-align: center;
   font-size: 1.2rem;
   position:relative;
+  justify-content: center;
   #contact-grid{
     display: flex;
     flex-direction: column;
@@ -53,7 +54,7 @@
   #contact #contact-grid {
       max-width: 1140px;
       width:80%;
-      padding-bottom:70px;
+      // padding-bottom:70px;
       .contact-item{
         flex-direction: row;
       }
