--- a/src/css/expertise.scss
+++ b/src/css/expertise.scss
@@ -2,15 +2,15 @@
   min-height:100vh;
   display:flex;
   flex-direction: column;
-  padding:150px 20px;
+  padding:200px 20px;
   width:100%;
   max-width:100%;
   background-color: #fff;
   color: #212529;
+  justify-content: center;
   #expertise-grid{
     display:flex;
     flex-direction: column;
-
     h2{
       font-size: 40px;
       margin-top: -25px;
