--- a/src/css/portfolioFilter.scss
+++ b/src/css/portfolioFilter.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   div{
+    margin-bottom: 20px;
     background-color: #117a8b;
     padding: 8px;
     border-radius: 5px;
